# yak-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FetchLagom.cmake  FindSDL2_image.cmake
src/: Entity.cpp  Entity.h  Game.cpp  Game.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  Types.h  main.cpp
src/Graphics/: Renderer.cpp  Renderer.h  Text.cpp  Text.h  Texture.cpp  Texture.h
src/YakPunk/: Assets.cpp  Assets.h  Entity.cpp  Entity.h  Forward.h  Game.cpp  Game.h  Scene.cpp  Scene.h
src/YakPunk/Graphics/: Font.cpp  Font.h  Graphic.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
